2009-29-07  Daniel Izquierdo Cortazar  <dizquierdo@libresoft.es>

	* Bicho/backends/bg.py: fixing bug #24

	Fixed bug #24


2009-29-07  Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/Bug.py: Added field resolution
	* Bicho/backends/bg.py: Fixed bug #17 - 
	Bicho fail to concatenate 'str' and 'NoneType' objects

	Fixed bug #17
	Thanks to Guido Conaldi for his report.


2009-24-07  Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/SqlBug.py: Added support for the missed fields in Storm.
	* Bicho/backends/bg.py: Added support for the missed fields.

	There is a new table in Bugzilla named as Bugzilla_Data
	where missing fields were added.
	It has also added the resolution field.


2009-23-02  Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* configure.in:

	Release 0.3


2009-23-02  Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: filtered blank characters

	Data from activity in bugzilla backend improved


2009-23-02  Santiago Dueñas Domínguez  <sduenas@gsyc.es>

	* README:

	Fixed example.
	

2009-19-02  Santiago Dueñas Domínguez  <sduenas@gsyc.es>

	* Bicho/main.py:
	* Bicho/utils.py:

	Some config file bugs fixed.


2009-19-02  Santiago Dueñas Domínguez  <sduenas@gsyc.es>

	* Bicho/backends/Makefile.am:

	Added missed file to the makefile.


2009-05-02 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: KDE bugzilla support added

	Bicho retrieves data from KDE's bugzilla.


2009-27-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Minor bug fixed

	Bicho retrieves comments


2009-14-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Now it inserts GeneralInfo

	General Info is stored


2009-01-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Comments data is now stored

	Comments are stored in the database


2009-04-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>
